<resources>
    <string name="app_name">My Application</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_page">Home Page</string>
    <string name="order_page">Order Page</string>
    <string name="review_page">Review Page</string>
    <string name="find">Find</string>
    <string name="restaurant">Restaurant</string>
    <string name="log_in">Log In</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="identity">identity</string>
    <string name="lock">Lock</string>
    <string name="login">Login</string>
    <string name="or">or</string>
    <string name="google_plus">Google Plus</string>
    <string name="facebook">Facebook</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_am_account">Don\'t have am account?</string>
    <string name="log_out">Log out</string>
    <string name="see_restaurant">See Restaurant</string>
    <string name="description_blah_blah">Description: Blah Blah.....</string>
    <string name="address_blah_blah">Address: Blah blah...........</string>
    <string name="category">Category</string>
    <string name="name">Name</string>
    <string name="_1">1</string>
    <string name="quantity">Quantity :</string>
    <string name="_1000">1000</string>
    <string name="taka">/-</string>
    <string name="location">Location</string>
    <string name="_5_5">5/5</string>
</resources>
