<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.user.myapplication.View.activites.LoginActivity"
    android:orientation="vertical"
    android:background="@drawable/login_background"
    android:id="@+id/linearlayout_id"
    android:focusable="true"
    android:focusableInTouchMode="true">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/login_id"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginBottom="50dp"
            android:fontFamily="@font/aladin"
            android:gravity="center"
            android:text="@string/log_in"
            android:textColor="#eee"
            android:textSize="60sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#eee"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:padding="8dp"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/user_identity_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="3dp"
                android:src="@drawable/ic_perm_identity_black_24dp"
                tools:ignore="RtlSymmetry"
                android:contentDescription="@string/identity" />
            <View
                android:layout_width="1dp"
                android:layout_height="25dp"
                android:background="#0b0101"/>
            <android.support.design.widget.TextInputEditText
                android:id="@+id/username_id"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:background="#eee"
                android:fontFamily="@font/aclonica"
                android:hint="@string/username"
                android:paddingStart="8dp"
                android:textSize="15sp"
                tools:ignore="RtlSymmetry"
                android:inputType="text"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#eee"
            android:layout_marginStart="30dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="2dp"
            android:padding="8dp"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="3dp"
                android:src="@drawable/ic_lock_outline_black_24dp"
                tools:ignore="RtlSymmetry"
                android:contentDescription="@string/lock" />
            <View
                android:layout_width="1dp"
                android:layout_height="25dp"
                android:background="#0b0101"/>
            <android.support.design.widget.TextInputEditText
                android:id="@+id/password_id"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:background="#eee"
                android:fontFamily="@font/aclonica"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingStart="8dp"
                android:textSize="15sp"
                tools:ignore="RtlSymmetry,TextFields" />
        </LinearLayout>
        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="2dp"
            android:background="#ac4606"
            android:fontFamily="@font/abril_fatface"
            android:text="@string/login"
            android:textColor="#EEE" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <View
                android:layout_weight=".85"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="70dp"
                android:background="#eee"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.3"
                android:fontFamily="@font/anton"
                android:text="OR"
                android:textAlignment="center"
                android:textColor="#eef205" />
            <View
                android:layout_weight=".85"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="70dp"
                android:background="#eee"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="2dp"
            android:padding="8dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:layout_marginEnd="5dp"
                android:background="#b13333">


                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/google_logo"
                    android:padding="3dp"/>
                <TextView
                    android:id="@+id/google_sign_in_id"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/google_plus"
                    android:textColor="#eee"
                    android:paddingStart="10dp"
                    android:paddingEnd="5dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:background="#4b6aba">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:padding="3dp"
                    android:src="@drawable/facebook"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/facebook"
                    android:textColor="#eee"
                    android:paddingStart="10dp"
                    android:paddingEnd="5dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="5dp"
            android:weightSum="2">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_weight=".8"
                android:fontFamily="@font/abhaya_libre"
                android:text="@string/don_t_have_am_account"
                android:textColor="#7c7979"
                android:textSize="13sp" />
            <TextView
                android:id="@+id/sign_up_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:fontFamily="@font/abhaya_libre"
                android:textColor="#ffffff"
                android:textSize="12sp"
                android:layout_weight="1.3"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="145dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/lobster"
            android:text="@string/forgot_password"
            android:textColor="#c4c2c2"
            android:textSize="12sp"
            android:id="@+id/reset_password_id"/>
    </LinearLayout>
</LinearLayout>
