<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="100dp"
    android:id="@+id/productLayoutId">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="1"
        android:layout_margin="4dp"
        android:background="#eee">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/restaurant9"
            android:scaleType="fitXY"
            android:id="@+id/productImageId"
            android:layout_weight=".7"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="1"
            android:layout_weight=".3">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/name"
                android:padding="10dp"
                android:id="@+id/productId"
                android:layout_weight=".1"
                android:textColor="#000000"
                tools:ignore="NestedWeights"
                android:visibility="gone"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight=".5"
                android:weightSum="1"
                android:layout_marginEnd="6dp"
                tools:ignore="NestedWeights">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/name"
                    android:padding="10dp"
                    android:id="@+id/productNameId"
                    android:layout_weight=".1"
                    android:textColor="#000000"
                    tools:ignore="NestedWeights" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/_1"
                    android:textAlignment="center"
                    android:padding="2dp"
                    android:id="@+id/itemQtyByUser"
                    android:layout_weight=".9"
                    android:textColor="#eee"
                    android:visibility="gone"
                    android:textSize="12sp"
                    android:background="@drawable/qty_text_view"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight=".5"
                android:weightSum="1">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/_1000"
                    android:paddingStart="5dp"
                    android:paddingTop="10dp"
                    android:textColor="#000000"
                    android:paddingBottom="10dp"
                    android:paddingEnd="0dp"
                    android:layout_marginStart="3dp"
                    android:id="@+id/productPriceId"
                    android:layout_weight=".25"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/taka"
                    android:textColor="#000000"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:paddingEnd="10dp"
                    android:layout_weight=".27"
                    tools:ignore="RtlSymmetry" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/quantity"
                    android:textColor="#000000"
                    android:padding="10dp"
                    android:layout_weight=".23"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text=""
                    android:textColor="#000000"
                    android:padding="10dp"
                    android:id="@+id/productQtyId"
                    android:layout_weight=".23"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>