<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="220dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginTop="10dp"
    android:id="@+id/restaurantViewHolder"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="1">
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorAccent"
            android:id="@+id/restaurantListFirstCardView"
            android:layout_margin="5dip"
            android:layout_weight=".5"
            app:contentPadding="3dp"
            app:cardCornerRadius="5dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="1">
                <TextView
                    android:id="@+id/restaurantId"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight=".5"
                    android:fontFamily="@font/anton"
                    android:paddingEnd="10dp"
                    android:paddingStart="10dp"
                    android:paddingTop="5dp"
                    android:text="@string/name"
                    android:textColor="#000000"
                    tools:ignore="NestedWeights"
                    android:visibility="gone"/>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/restaurant2"
                    android:scaleType="fitXY"
                    android:layout_weight=".4"
                    android:id="@+id/restaurantImages"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight=".6"
                    android:weightSum="1">
                    <TextView
                        android:id="@+id/restaurantName"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight=".5"
                        android:fontFamily="@font/anton"
                        android:paddingEnd="10dp"
                        android:paddingStart="10dp"
                        android:paddingTop="5dp"
                        android:text="@string/name"
                        android:textColor="#000000"
                        tools:ignore="NestedWeights" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:layout_weight=".5"
                        android:weightSum="1">
                        <TextView
                            android:id="@+id/restaurantLocation"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight=".2"
                            android:fontFamily="@font/aladin"
                            android:paddingEnd="10dp"
                            android:paddingStart="10dp"
                            android:paddingTop="5dp"
                            android:text="@string/location"
                            android:textSize="12sp"
                            android:textColor="#000000" />
                        <TextView
                            android:id="@+id/restaurantRating"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight=".8"
                            android:fontFamily="@font/lobster"
                            android:paddingEnd="10dp"
                            android:paddingStart="10dp"
                            android:paddingTop="5dp"
                            android:text="@string/_5_5"
                            android:textColor="#000000" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</LinearLayout>